Fix mobile search toggle visibility and enable Wares page scrolling

--- a/themes/san-diego/source/styles/_wares.scss
+++ b/themes/san-diego/source/styles/_wares.scss
@@ -15,7 +15,7 @@
 
         @media screen and (max-width: variables.$mobile-breakpoint) {
                 padding: 0;
-                min-height: 0;
+                min-height: 150vh; // Force scrollable height so header can scroll away
         }
 }
 
